@@ -1,7 +1,7 @@
 from django.views.generic.base import TemplateView
 from django.utils import timezone
 
-from dsmr_datalogger.models.reading import MeterStatistics
+from dsmr_datalogger.models.reading import DsmrReading, MeterStatistics
 from dsmr_consumption.models.energysupplier import EnergySupplierPrice
 from dsmr_datalogger.models.settings import DataloggerSettings
 import dsmr_backend.services
@@ -14,8 +14,12 @@ class Statistics(TemplateView):
         context_data = super(Statistics, self).get_context_data(**kwargs)
         context_data['capabilities'] = dsmr_backend.services.get_capabilities()
 
-        today = timezone.localtime(timezone.now()).date()
+        try:
+            context_data['latest_reading'] = DsmrReading.objects.all().order_by('-pk')[0]
+        except IndexError:
+            pass
 
+        today = timezone.localtime(timezone.now()).date()
         context_data['datalogger_settings'] = DataloggerSettings.get_solo()
         context_data['meter_statistics'] = MeterStatistics.get_solo()
 
