@@ -4,6 +4,7 @@ v0.15 (β) - 2016-xx-xx
 ======================
 - Django 1.8.11 released (#82).
 - Prevent tests from failing due to moment of execution (#88).
+- Statistics page meter positions are broken (#93).
 - 
 
 
